--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: lightgrey;
 }
 h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 20px auto 20px;
   text-align: center;
 }
 
@@ -13,11 +16,13 @@ label {
 }
 
 label {
-  color: green;
+  color: black;
+  background-color: rgb(122, 163, 122);
 }
 
 input {
   width: 100%;
+  background-color: rgb(255, 255, 255);
 }
 
 .submit {
@@ -33,10 +38,12 @@ form {
   margin: auto;
   border: 2px solid black;
   padding: 15px;
+  background-color: rgb(122, 163, 122);
 }
 
 .g-recaptcha {
   margin-top: 15px;
   display: flex;
   justify-content: center;
+  background-color: rgb(122, 163, 122);
 }
